<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LIME-HD</string>
    <string name="ime_name">LIME-HD</string>
    <string name="ime_setting">LIME-HD Settings</string>
    <string name="input_method">System Input Method</string>
    <string name="experienced_device">Experienced Device</string>
    <string name="license">License Agreement</string>
    <string name="license_detail">LIME-HD is an open framework inputmethod for Chinese Characters.\nIts objective is to provide Android user a flexible and convenience tools for the text input. We do not support and responsible for any illeage use of this application or its content.\nPlease  refer to http://code.google.com/p/limeime/ for the complete license information.</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="word_symbol_separators">\u0020?\n{}&lt;&gt;_+|&quot;</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_close_key">Close</string>
    <string name="lime_setting_btn_load_local_notice">Select .LIME or .CIN File</string>
    <string name="lime_setting_loading">Loading Mapping</string>
    <string name="lime_setting_select_root"> - back to /</string>
    <string name="lime_setting_select_parent"> - back to ..</string>
    <string name="lime_loading">Loading ...</string>
    <string name="lime_loading_cancel">Cancel</string>
    <string name="lime_setting_notification_loading">Start Loading Mapping Table</string>
    <string name="lime_setting_notification_failed">Mapping Import Failed !!</string>
    <string name="lime_setting_notification_finish">Mapping Import Finished</string>
    <string name="lime_setting_notification_related">Start Building Related Words</string>
    <string name="lime_setting_notification_loading_start">LIME</string>
    <string name="lime_setting_notification_loading_end">mappings loaded.</string>
    <string name="lime_setting_notification_loading_build">Building </string>
    <string name="lime_setting_notification_loading_import">IM-table: </string>
    <string name="lime_setting_db">Mapping DB</string>
    <string name="lime_setting_preference">Preference</string>
    <string name="lime_setting_bluetooth">Bluetooth</string>
    <string-array name="keyboard">
		<item>Lime</item>
		<item>Changjei</item>
		<item>SChangjei</item>
		<item>Changjei5</item>
		<item>EazyChangjei</item>
		<item>Dayi</item>
		<item>Phonetic</item>
		<item>Eazy</item>
		<item>Array</item>
		<item>Array10</item>
		
	</string-array>
    <string name="Similiar">Similiar</string>
    <string name="mapping">Mapping</string>
    <string name="keyboard_list">LIME Input Method</string>
    <string name="default_in_english">Starting in English mode</string>
    <string name="default_in_english_summary">Starting input in English mode.</string>
    <string name="number_row_in_english">Show number row in English mode</string>
    <string name="number_row_in_english_summary">Show number row in English keyboards (5 rows keyboard).</string>
    <string name="physical_keyboard">Physical keyboard selection</string>
    <string name="phonetic_keyboard">Phonetic keyboard selection</string>
    <string name="three_rows_remapping">3 Rows Keybaord Remapping</string>
    <string name="three_rows_remapping_summary">Mapping 1234567890-; to qwertyuiopv.</string>
    <string name="prediction_category">English word suggestion settings</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="im">Input Method</string>
    <string name="enable_english_dictionary">Enable English prediction</string>
    <string name="enable_english_dictionary_summary">Enable English prediction with English dictionary</string>
    <string name="enable_english_dictionary_physical_keyboard">Enable English prediction on physical keyboard</string>
    <string name="enable_english_dictionary_physical_keyboard_summary">Enable English prediction with English dictionary  on physical keyboard</string>
    <string name="im_reverse_lookup_list">R-Lookup Selection</string>
    <string name="default_reverse_lookup_list">R-Lookup in Custom</string>
    <string name="cj_reverse_lookup_list">R-Lookup in ChangJei</string>
    <string name="scj_reverse_lookup_list">R-Lookup in SChangJei</string>
    <string name="dayi_reverse_lookup_list">R-Lookup in Dayi</string>
    <string name="bpmf_reverse_lookup_list">R-Lookup in Phonetic</string>
    <string name="ez_reverse_lookup_list">R-Lookup in Eazy</string>
    <string name="array_reverse_lookup_list">R-Lookup in Array</string>
    <string name="array10_reverse_lookup_list">R-Lookup in Array10</string>
    <string name="cj5_reverse_lookup_list">R-Lookup in ChangJei5</string>
    <string name="ecj_reverse_lookup_list">R-Lookup in EazyChangJei</string>
    <string name="wb_reverse_lookup_list">R-Lookup in Wubi</string>
    <string name="han_convert_option_list">Chinese Characters Conversion</string>
    <string name="selkey_option_list">Candidate bar options</string>
    <string name="table_list">Table Selection</string>
    <string name="similiar_list">Suggestion display amount</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="display_number_keypads">Display number keypads</string>
    <string name="display_number_keypads_summary">Display number keypads</string>
    <string name="candidate_switch">Sliding select suggestion</string>
    <string name="candidate_switch_summary">Enable suggestion word sliding selection</string>
    <string name="similiar_enable_switch">Enable related words dictionary</string>
    <string name="similiar_enable_switch_summary">Enable related words dictionary</string>
    <string name="candidate_suggestion">Auto-build related words</string>
    <string name="candidate_suggestion_summary">Learn related words base on text input</string>
    <string name="learning_switch">Sort suggestion list</string>
    <string name="learning_switch_summary">Sort suggestion list base on learned frequency</string>
    <string name="physical_keyboard_sort">Sort suggestion list using physical keyboard</string>
    <string name="physical_keyboard_sort_summary">Sort suggestion list base on learned frequency, when using physical keyboard</string>
    <string name="accept_number_index">Mapping on numbers</string>
    <string name="accept_number_index_summary">Allow input 0-9 as mapping code</string>
    <string name="accept_symbol_index">Mapping on symbols</string>
    <string name="accept_symbol_index_summary">Allow punctuation as mapping code</string>
    <string name="switch_english_mode">Quick switch hotkey</string>
    <string name="switch_english_mode_summary">[SHIFT]+[SPACE] switch typing mode [Physical Keyboard]</string>
    <string name="typing_mode_english">Typing Mode / English</string>
    <string name="typing_mode_mixed">Typing Mode / Mixed</string>
    <string name="chinese_punctuation">「」！？、。，</string>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="alternates_for_a">àáâãäåæ</string>
    <string name="alternates_for_e">èéêë</string>
    <string name="alternates_for_i">ìíîï</string>
    <string name="alternates_for_o">òóôõöœø</string>
    <string name="alternates_for_u">ùúûü</string>
    <string name="alternates_for_s">§ß</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_c">ç</string>
    <string name="alternates_for_y">ýÿ</string>
    <string name="sentence_separators">.,;:!?</string>
    <string name="alternates_for_d"></string>
    <string name="alternates_for_r"></string>
    <string name="alternates_for_t"></string>
    <string name="alternates_for_z"></string>
    <string name="alternates_for_l"></string>
    <string name="alternates_for_g"></string>
    <string name="label_done_key">Done</string>
    <string name="label_symbol_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".tw"</string>
    <string name="popular_domain_3">".org"</string>
    <string name="popular_domain_4">".gov"</string>
    <string name="popular_domain_5">".edu"</string>
    <string-array name="han_convert_options">
		<item>none</item>
		<item>Traditional to Simplified</item>
		<item>Simplified to Traditional</item>
	</string-array>
	<string-array name="han_convert_options_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string-array name="selkey_options">
		<item>Select the mixed mode English word with the first key</item>
		<item>Select the first Chinese candidate with the first key</item>
		<item>Select the second Chinese candidate with the first key</item>
	</string-array>
	<string-array name="selkey_options_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string-array name="physical_keyboard_options">
		<item>Normal keyboard</item>
		<item>Desire Z</item>
		<item>Milestone</item>
		<item>Milestone 2</item>
		<item>Milestone 3</item>
	</string-array>
	<string-array name="physical_keyboard_options_values">
		<item>normal_keyboard</item>
		<item>desireZ</item>
		<item>milestone</item>
		<item>milestone2</item>
		<item>milestone3</item>
	</string-array>
	<string-array name="phonetic_keyboard_type">
		<item>Standard</item>
		<item>ETEN 41keys</item>
		<item>ETEN 26keys</item>
		<item>Hsu</item>
	</string-array>
	<string-array name="phonetic_keyboard_type_values">
		<item>standard</item>
		<item>eten</item>
		<item>eten26</item>
		<item>hsu</item>
	</string-array>
    <string-array name="im_reverse_lookup">
		<item>None</item>
		<item>Custom</item>
		<item>Changjei</item>
		<item>SChangjei</item>
		<item>Changjei5</item>
		<item>EazyChangjei</item>
		<item>Dayi</item>
		<item>Phonetic</item>
		<item>Eazy</item>
		<item>Array</item>
		<item>Array10</item>
		
	</string-array>
	<string-array name="im_reverse_lookup_codes">
		<item>none</item>
		<item>custom</item>
		<item>cj</item>
		<item>scj</item>
		<item>cj5</item>
		<item>ecj</item>
		<item>dayi</item>
		<item>phonetic</item>
		<item>ez</item>
		<item>array</item>
		<item>array10</item>
		
	</string-array>
	<string-array name="keyboard_defaultstate">
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		<item>true</item>
		
		<item>true</item>
	</string-array>
    <string-array name="keyboard_codes">
		<item>custom</item>
		<item>cj</item>
		<item>scj</item>
		<item>cj5</item>
		<item>ecj</item>
		<item>dayi</item>
		<item>phonetic</item>
		<item>ez</item>
		<item>array</item>
		<item>array10</item>
		
	</string-array>
	<string-array name="table_codes">
		<item>custom</item>
		<item>cj</item>
		<item>scj</item>
		<item>cj5</item>
		<item>ecj</item>
		<item>dayi</item>
		<item>phonetic</item>
		<item>ez</item>
		<item>array</item>
		<item>array10</item>
		
		<item>related</item>
		<item>dictionary</item>
	</string-array>
    <string-array name="similiar_codes">
		<item>0</item>
		<item>10</item>
		<item>20</item>
		<item>30</item>
		<item>40</item>
		<item>50</item>
	</string-array>
</resources>