<?xml version="1.0" encoding="utf-8"?>

<!--
/*    
**    Copyright 2010, The LimeIME Open Source Project
** 
**    Project Url: http://code.google.com/p/limeime/
**    Official Url: http://android.toload.net/
**
**    This program is free software: you can redistribute it and/or modify
**    it under the terms of the GNU General Public License as published by
**    the Free Software Foundation, either version 3 of the License, or
**    (at your option) any later version.

**    This program is distributed in the hope that it will be useful,
**    but WITHOUT ANY WARRANTY; without even the implied warranty of
**    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
**    GNU General Public License for more details.

**    You should have received a copy of the GNU General Public License
**    along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_preference"
                android:title="LIME Preference"
                android:summary="LIME Preference Configuration">
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_keyboard"
                android:title="@string/keyboard"
                android:summary="">
        <ListPreference
				android:key="keyboard_list"
				android:title="@string/keyboard_list"
				android:entries="@array/keyboard"
				android:entryValues="@array/keyboard_codes"
				android:dialogTitle="@string/keyboard_list" />
         <CheckBoxPreference
                android:key="three_rows_remapping"
                android:title="@string/three_rows_remapping" 
                android:summary="@string/three_rows_remapping_summary" />
        <CheckBoxPreference
                android:key="vibrate_on_keypress"
                android:title="@string/vibrate_on_keypress" />
        <CheckBoxPreference
                android:key="sound_on_keypress"
                android:title="@string/sound_on_keypress"/>
        <CheckBoxPreference
                android:key="display_number_keypads"
                android:title="@string/display_number_keypads"
                android:summary="@string/display_number_keypads_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        		xmlns:android="http://schemas.android.com/apk/res/android"
                android:summary="" android:key="lime_im" android:title="@string/im">
    <ListPreference
    			android:key="default_im_reverselookup"
    			android:title="@string/default_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="cj_im_reverselookup"
    			android:title="@string/cj_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="dayi_im_reverselookup"
    			android:title="@string/dayi_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="bpmf_im_reverselookup"
    			android:title="@string/bpmf_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
   
</PreferenceCategory>
    
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_mapping"
                android:title="@string/mapping"
                android:summary="">
        <ListPreference
				android:key="similiar_list"
				android:title="@string/similiar_list"
				android:entries="@array/similiar_codes"
				android:entryValues="@array/similiar_codes"
				android:dialogTitle="@string/similiar_list" />
        <CheckBoxPreference
                android:key="candidate_switch"
                android:title="@string/candidate_switch"
                android:summary="@string/candidate_switch_summary" />
        <CheckBoxPreference
                android:key="candidate_suggestion"
                android:title="@string/candidate_suggestion"
                android:summary="@string/candidate_suggestion_summary" />
        <CheckBoxPreference
                android:key="learning_switch"
                android:title="@string/learning_switch"
                android:summary="@string/learning_switch_summary" />
        <CheckBoxPreference
                android:key="accept_number_index"
                android:title="@string/accept_number_index"
                android:summary="@string/accept_number_index_summary" />
        <CheckBoxPreference
                android:key="accept_symbol_index"
                android:title="@string/accept_symbol_index"
                android:summary="@string/accept_symbol_index_summary" />
        <CheckBoxPreference
                android:key="switch_english_mode"
                android:title="@string/switch_english_mode"
                android:summary="@string/switch_english_mode_summary" />
    </PreferenceCategory>
</PreferenceScreen>

